Image SQL on small screen fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ article {
 }
 
 .skills_icon {
-    height: 150px;
+    height: 200px;
 }
 
 .skills_icon:hover {
@@ -501,7 +501,6 @@ form { max-width:420px; margin:50px auto; }
     nav img {
       left: 8%;
     }
-    
 }
 
 @media only screen and  (max-width: 1500px) {
@@ -521,6 +520,10 @@ form { max-width:420px; margin:50px auto; }
 }
 
 @media only screen and  (max-width: 944px) {
+
+    .skills_icon {
+        height: 150px;
+    }
 
     .feedback-input {
         margin-left: 0; /* Remove negative margin on smaller screens */
@@ -558,10 +561,14 @@ form { max-width:420px; margin:50px auto; }
     .for_social_icons:hover {
         transform: scale(1.05); /* Increase the size by 10% on hover (you can adjust this as needed) */
         opacity: 1;
-    } 
+    }
 }
 
 @media only screen and  (max-width: 860px) {
+
+    .skills_icon {
+        height: 50px;
+    }
 
     .p_exp {
         font-size: 10px; /* Adjust the font size as needed */
@@ -590,16 +597,12 @@ form { max-width:420px; margin:50px auto; }
         text-align: center;
         
     }
-
-    .img_face {
-        height: 310px;
-    }
    
     label #btn {
         display: block;
-   }
+    }
 
-    ul{
+    ul {
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -674,16 +677,16 @@ form { max-width:420px; margin:50px auto; }
         flex-direction: column;
         text-align: center;
         align-items: center;
-      }
-    
-      .container_outer_img {
+    }
+
+    .container_outer_img {
         margin: 20px;
-      }
-    
-      .container_img {
+    }
+
+    .container_img {
         width: 60%; /* Adjust as needed */
         margin: 0 auto;
-      }
+    }
 }
 
 /* Apply styles to hide content when the menu is open */
